Add test text to index file

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div>
       <img src="images/placeholder-hex.svg" alt="#">
       <h2>Feature Item</h2>
-      <p>bla</p>
+      <p>bla bla</p>
 
   </main>
 
