Add css to header

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 
 <body>
   <header>
+    
     <div>
-      <img src="images/placeholder-hex.svg" alt="">
+      <img class="logo-left" src="images/placeholder-hex.svg" alt="">
+      <img class="logo-right" src="images/placeholder-hex.svg" alt="">
+      <h1>Beau's Bonbons</h1>
     </div>
-
-    <h1>Beau's Bonbons</h1>
 
     <div>
       <nav>
