Move images and add id tags

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
   <header>
-    
+
     <div>
-      <img class="logo-left" src="images/placeholder-hex.svg" alt="">
-      <img class="logo-right" src="images/placeholder-hex.svg" alt="">
+      <img class="logo-left" src="images/noun_731157.svg" alt="">
+      <img class="logo-right" src="images/noun_731157.svg" alt="">
       <h1>Beau's Bonbons</h1>
     </div>
 
@@ -23,9 +23,7 @@
           <li><a href="#">Home</a></li>
           <li><a href="#collections">Collections</a></li>
           <li><a href="#workshops">Wokshops</a></li>
-          <li><a href="#">Events</a></li>
-          <li><a href="#">Location</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -74,7 +72,7 @@
       </ol>
     </section>
 
-  <footer>
+  <footer id="contact">
     <div class="social-media">
       <img src="images/sm-icon/facebook-square.svg" alt="">
       <img src="images/sm-icon/twitter.svg" alt="">
