Add class to figure

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 <body>
   <header>
-
     <div>
       <img class="logo-left" src="images/noun_731157.svg" alt="">
       <img class="logo-right" src="images/noun_731157.svg" alt="">
@@ -30,7 +29,7 @@
   </header>
 
   <main>
-    <div>
+    <div class="intro">
       <img src="images/placeholder-hex.svg" alt="#">
       <h2>Welcome</h2>
       <p>Beau's Bonbons is a one-stop shop for all your sweet tooth needs! We offer collection packages, weekly DIY workshops and special events at mutiple locations.</p>
@@ -48,7 +47,7 @@
     <section>
       <h2 id="workshops">Upcoming Workshops</h2>
       <figure>
-        <img src="images/cakepops.jpg" alt="">
+        <img class="workshop-img" src="images/cakepops.jpg" alt="">
 
         <figcaption>
           <h3>Cake-pops</h3>
@@ -58,7 +57,7 @@
       </figure>
 
       <figure>
-        <img src="images/candy-gram.jpg" alt="">
+        <img class="workshop-img" src="images/candy-gram.jpg" alt="">
 
         <figcaption>
           <h3>Candy-grams</h3>
@@ -68,7 +67,7 @@
       </figure>
 
       <figure>
-        <img src="images/bouquet.jpg" alt="">
+        <img class="workshop-img" src="images/bouquet.jpg" alt="">
 
         <figcaption>
           <h3>Bouquets and Baskets</h3>
