Add css to footer

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         </figcaption>
       </figure>
     </section>
+  </main>
 
   <footer id="contact">
     <div class="social-media">
@@ -86,10 +87,7 @@
     </div>
 
     <p>© Beau's Bonbons</p>
-
-
-
-  </main>
+  </footer>
 
 </body>
 </html>
