Center header content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <div>
+    <div class="header">
       <img class="logo-left" src="images/noun_731157.svg" alt="">
       <img class="logo-right" src="images/noun_731157.svg" alt="">
       <h1>Beau's Bonbons</h1>
