Add css to buttons

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 
   <main>
     <div class="intro">
-      <img src="images/placeholder-hex.svg" alt="#">
       <h2>Welcome</h2>
       <p>Beau's Bonbons is a one-stop shop for all your sweet tooth needs! We offer collection packages, weekly DIY workshops and special events at mutiple locations.</p>
     </div>
@@ -46,7 +45,7 @@
 
     <section>
       <h2 id="workshops">Upcoming Workshops</h2>
-      <figure>
+      <figure class="link-card">
         <img class="workshop-img" src="images/cakepops.jpg" alt="">
 
         <figcaption>
@@ -56,7 +55,7 @@
         </figcaption>
       </figure>
 
-      <figure>
+      <figure class="link-card">
         <img class="workshop-img" src="images/candy-gram.jpg" alt="">
 
         <figcaption>
@@ -66,7 +65,7 @@
         </figcaption>
       </figure>
 
-      <figure>
+      <figure class="link-card">
         <img class="workshop-img" src="images/bouquet.jpg" alt="">
 
         <figcaption>
