Add height to images

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </figcaption>
       </figure>
 
-      <figure class="link-card">
+      <figure class="card">
         <img class="workshop-img" src="images/candy-gram.jpg" alt="">
 
         <figcaption>
