Add contact to footer

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   <header>
     <div class="header">
-      <img class="logo-left" src="images/noun_731157.svg" alt="">
-      <img class="logo-right" src="images/noun_731157.svg" alt="">
+      <img class="logo-left" src="images/cupcake-logo.svg" alt="">
+      <img class="logo-right" src="images/cupcake-logo.svg" alt="">
       <h1>Beau's Bonbons</h1>
     </div>
 
@@ -46,7 +46,7 @@
     <section>
       <h2 id="workshops">Upcoming Workshops</h2>
       <figure class="link-card">
-        <img class="workshop-img" src="images/cakepops.jpg" alt="">
+        <img class="img-flex workshop-img" src="images/cakepops.jpg" alt="">
 
         <figcaption>
           <h3>Cake-pops</h3>
@@ -55,8 +55,8 @@
         </figcaption>
       </figure>
 
-      <figure class="card">
-        <img class="workshop-img" src="images/candy-gram.jpg" alt="">
+      <figure class="link-card">
+        <img class="img-flex workshop-img" src="images/candy-gram.jpg" alt="">
 
         <figcaption>
           <h3>Candy-grams</h3>
@@ -66,7 +66,7 @@
       </figure>
 
       <figure class="link-card">
-        <img class="workshop-img" src="images/bouquet.jpg" alt="">
+        <img class="img-flex workshop-img" src="images/bouquet.jpg" alt="">
 
         <figcaption>
           <h3>Bouquets and Baskets</h3>
@@ -87,8 +87,10 @@
 
     <p>© Beau's Bonbons</p>
 
-    <div class="contact">
-      <p>
+    <div class="contact-info">
+      <p>1-800-222-7153</p>
+      <p>info@beaus.com</p>
+    </div>
   </footer>
 
 </body>
