Style footer in css

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#collections">Collections</a></li>
+          <li><a class="button" href="#">Home</a></li>
+          <li><a class="button" href="#collections">Collections</a></li>
           <li><a href="#workshops">Wokshops</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -29,9 +29,15 @@
   </header>
 
   <main>
-    <div class="intro">
-      <h2>Welcome</h2>
-      <p>Beau's Bonbons is a one-stop shop for all your sweet tooth needs! We offer collection packages, weekly DIY workshops and special events at mutiple locations.</p>
+    <div class="banner">
+      <div class="banner-img">
+        <img class="img-flex" src="images/banner-candy.jpg" alt="">
+      </div>
+
+      <div class="banner-text">
+        <h2 class="banner-h2">Welcome</h2>
+        <p>Beau's Bonbons is a one-stop shop for all your sweet tooth needs! We offer collection packages, weekly DIY workshops and special events at mutiple locations.</p>
+      </div>
     </div>
 
     <section>
@@ -79,17 +85,17 @@
 
   <footer id="contact">
     <div class="social-media">
-      <img src="images/sm-icon/facebook-square.svg" alt="">
-      <img src="images/sm-icon/twitter.svg" alt="">
-      <img src="images/sm-icon/instagram.svg" alt="">
-      <img src="images/sm-icon/pinterest.svg" alt="">
+      <img class="sm-img" src="images/sm-icon/facebook-square.svg" alt="">
+      <img class="sm-img"src="images/sm-icon/twitter.svg" alt="">
+      <img class="sm-img"src="images/sm-icon/instagram.svg" alt="">
+      <img class="sm-img"src="images/sm-icon/pinterest.svg" alt="">
     </div>
 
     <p>© Beau's Bonbons</p>
 
     <div class="contact-info">
       <p>1-800-222-7153</p>
-      <p>info@beaus.com</p>
+      <p class="email">info@beaus.com</p>
     </div>
   </footer>
 
