Fix indents and spacing in css

--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
             <a class="btn" href="">Register</a>
           </figcaption>
         </figure>
-      <div>
+      </div>
     </section>
   </main>
 
   <footer id="contact">
     <div class="social-media">
       <img class="sm-img" src="images/sm-icon/facebook-square.svg" alt="">
-      <img class="sm-img"src="images/sm-icon/twitter.svg" alt="">
-      <img class="sm-img"src="images/sm-icon/instagram.svg" alt="">
-      <img class="sm-img"src="images/sm-icon/pinterest.svg" alt="">
+      <img class="sm-img" src="images/sm-icon/twitter.svg" alt="">
+      <img class="sm-img" src="images/sm-icon/instagram.svg" alt="">
+      <img class="sm-img" src="images/sm-icon/pinterest.svg" alt="">
     </div>
 
     <div class="footer-info">
